workload_examples/07_network_policy_WIP/01_db.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: database-pod-1
  labels:
    tier: db
    app: HRApp-1
    site: USA
    deployment: production
spec:
  containers:
    - name: database-pod-1
      image: fashaikh7/database
---
apiVersion: v1
kind: Service
metadata:
  name: database-svc-1
  labels:
    tier: db
    app: HRApp-1
    site: USA
    deployment: production
spec:
  selector:
    tier: db
    app: HRApp-1
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
