workload_examples/07_network_policy_WIP/02_app.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: app-pod-1
  labels:
    tier: app
    app: HRApp-1
    site: USA
    deployment: production
spec:
  containers:
    - name: app-pod-1
      image: fashaikh7/frontend
---
apiVersion: v1
kind: Service
metadata:
  name: app-svc-1
  labels:
    tier: app
    app: HRApp-1
    site: USA
    deployment: production
spec:
  selector:
    tier: app
    app: HRApp-1
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
